Fixes search bar images and spacing

--- a/app/assets/stylesheets/headers/search.scss
+++ b/app/assets/stylesheets/headers/search.scss
@@ -61,8 +61,8 @@
 }
 
 .result-text {
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 5px;
+  margin-left: 12px;
 }
 
 .result-name {
