--- a/app/assets/stylesheets/show_pages/show_share.scss
+++ b/app/assets/stylesheets/show_pages/show_share.scss
@@ -7,8 +7,7 @@
 
 .show-page-container {
   background-color: white;
-  position: relative;;
-  border: 1px solid black;
+  position: relative;
   margin: auto;
   height: 1000px;
   width: 975px;
